Add exit button to modem-ON notification

--- a/AndFlmsg_Head_CPP/src/main/res/values/strings.xml
+++ b/AndFlmsg_Head_CPP/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hello">Hello</string>
     <string name="crash_toast_text">Please send crash information email to the author to help with problem correction. Thanks and 73.</string>
     <string name="arlmessage">Arl Message</string>
+    <string name="exit">Exit</string>
 </resources>
